--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+import java.util.Properties
+
 def localProperties = new Properties()
 def localPropertiesFile = rootProject.file('local.properties')
 if (localPropertiesFile.exists()) {
@@ -12,6 +14,22 @@ if (localPropertiesFile.exists()) {
     }
 }
 
+
+def loadEnvProperties() {
+    def properties = new Properties()
+    def envFile = rootProject.file('../.env')
+    if (envFile.exists()) {
+        println ".env file found"
+        envFile.withInputStream { stream ->
+            properties.load(stream)
+        }
+    } else {
+        println ".env file does not exist at: ${envFile.absolutePath}"
+    }
+    return properties
+}
+
+def env = loadEnvProperties()
 def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
 if (flutterVersionCode == null) {
     flutterVersionCode = '1'
@@ -45,10 +63,13 @@ android {
         applicationId "com.example.ihuriro"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 20
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [
+            GOOGLE_MAPS_API_KEY: env['GOOGLE_MAPS_API_KEY'] ?: ""
+        ]
     }
 
     buildTypes {
