--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_nav_bar: ^5.0.6
+  flutter_dotenv: ^5.1.0
+  google_maps_flutter: ^2.2.8
+  location: ^5.0.3
+  flutter_polyline_points: ^2.0.0
 
 dev_dependencies:
   flutter_test:
