--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_maps_flutter: ^2.2.8
   location: ^5.0.3
   flutter_polyline_points: ^2.0.0
+  shared_preferences: ^2.2.2
+  http: ^1.2.0
 
 dev_dependencies:
   flutter_test:
