--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_polyline_points: ^2.0.0
   shared_preferences: ^2.2.2
   http: ^1.2.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
