--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.2.0
   intl: ^0.19.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
