--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   intl: ^0.19.0
   image_picker: ^0.8.4+4
   weather: ^3.1.1
+  pdf: ^3.6.2
+  printing: ^5.9.1
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
